# send_file_to_eth_demo

./: Makefile  README.md  components.json  dfx.json  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
scripts/: deploy-ic.sh  deploy.sh
src/backend/: Cargo.toml  backend.did  build.rs
src/backend/declarations/: backend.did  backend.did.d.ts  backend.did.js
src/backend/src/: lib.rs  utils.rs
src/backend/src/transfer/: mod.rs  transfer_manager.rs  transfer_types.rs
src/backend/src/transfer/controller/: mod.rs  transfer_create.rs  transfer_get.rs  transfer_list.rs
src/backend/src/user/: mod.rs  user_manager.rs
src/backend/src/user/controller/: mod.rs  user_get.rs  user_register.rs
src/backend/src/vetkd/controller/: mod.rs  vetkd_encrypted_key.rs  vetkd_public_key.rs  vetked_encrypted_key.rs
src/chainkey_testing_canister/: chainkey_testing_canister.wasm
src/chainkey_testing_canister/declarations/: chainkey_testing_canister.did  chainkey_testing_canister.did.d.ts  chainkey_testing_canister.did.js  index.d.ts  index.js
src/frontend/: index.html
src/frontend/src/: App.tsx  AuthGuard.tsx  index.css  main.tsx
src/frontend/src/components/: AccountDialog.tsx  ConnectDialog.tsx  EthBadge.tsx  ReceivedFiles.tsx  SendFile.tsx  TransferDialog.tsx  TransferForm.tsx  Transfers.tsx
src/frontend/src/components/header/: Header.tsx  SessionButton.tsx  SessionDialog.tsx
src/frontend/src/ic/: Actors.tsx
src/frontend/src/lib/: formatSize.ts
(+9 files in other folders)
