[package]
name = "backend"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.1", default-features = false, features = [
  "icp",
] }
candid = "0.10.12"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk = "0.17.1"
ic-stable-structures = "0.6.7"
serde = "1.0.217"
serde_json = "1.0.137"
serde_bytes = "0.11.15"

[build-dependencies]
ic-cdk-bindgen = "0.1.3"
dotenv = "0.15.0"
